--- a/UI.html
+++ b/UI.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="frontpage.css">
     <link href="https://fonts.googleapis.com/css?family=Arimo|Open+Sans:600i" rel="stylesheet">
-    <title>324 Project</title>
+    <title>Cheap Date Application</title>
 </head>
 
 <body>
   <header>
-    <h3>Our Project</h3>
+    <h3>Cheap Date</h3>
     <nav>
       <ul>
         <li id="week"><a href="#">This Week</a>
