Updated JS file to projectJS-RedickEdits.js
Updated JS file to projectJS-RedickEdits.js for Redick to work on date function

--- a/UI.html
+++ b/UI.html
@@ -70,7 +70,7 @@
 
 <footer>created by Grace, Blake, Redick and Keyti &#x2764;</footer>
 </main>
-<script src="projectJS.js"></script>
+<script src="projectJS-RedickEdits.js"></script>
 <script src="jquery.js"></script>
 </body>
 </html>
