Centering suggestions tabs because of a possible bug during a merge

--- a/Updated-Version-Logo/assets/Website.html
+++ b/Updated-Version-Logo/assets/Website.html
@@ -62,7 +62,7 @@
 
 </div>
 
-<div id="Suggestions" class="tabcontent">
+<div id="Suggestions" style="margin-right: 150px;" class="tabcontent">
 
 <!--add "Today's Deal" that pulls from JSON data-->
 
@@ -156,9 +156,9 @@ for (i in jsonArray) {
 
 </div>
 
-<footer>created by Grace, Blake and Keyti &#x2764;</footer>
 
 </main>
+<footer>created by Grace, Blake and Keyti &#x2764;</footer>
 <script src="jquery-331.js"></script>
 <script src="Script.js"></script>
 </body>
