--- a/Updated-Version-Logo/assets/Website.html
+++ b/Updated-Version-Logo/assets/Website.html
@@ -19,31 +19,31 @@
 <div id="Home" class="tabcontent">
   <form id="theForm">
     <fieldset>
-        <legend>Choose One or More Activity</legend>
+        <legend>Choose one or more activity</legend>
             <input type="checkbox" id="activityChoice1" name="food" value="food">
               <label for="activityChoice1">Food</label>
             <input type="checkbox" id="activityChoice2" name="drinks" value="drinks">
               <label for="activityChoice2">Drinks</label>
-            <!-- <input type="checkbox" id="activityChoice3" name="entertainment" value="entertainment">
-              <label for="activityChoice3">Entertainment</label> -->
+            <input type="checkbox" id="activityChoice3" name="entertainment" value="entertainment">
+              <label for="activityChoice3">Entertainment</label>
     </fieldset>
 
-    <!-- <fieldset>
+    <fieldset>
         <legend>Choose a date</legend>
             <input type="date" id="date" name="event" min="2018-01-01" max="2050-01-01" required>
-    </fieldset> -->
+    </fieldset>
 
-    <!-- <fieldset>
+    <fieldset>
         <legend>Are you a Loyola student?</legend>
             <input type="radio" id="studentChoice1" name="student" value="yes" required>
             <label for="studentChoice1">Yes</label>
 
             <input type="radio" id="studentChoice2" name="student" value="no" required>
             <label for="studentChoice2">No</label>
-    </fieldset> -->
+    </fieldset>
 
     <fieldset>
-        <legend>Are You 21 or Older?</legend>
+        <legend>Are you over the age of 21?</legend>
             <input type="radio" id="ageChoice1" name="age" value="yes" required>
             <label for="ageChoice1">Yes</label>
 
@@ -69,7 +69,7 @@
 <button class="accordion">This Week</button>
 <div class="panel">
     <!--add entire weekly deals that pulls from JSON data-->
-<p> Here are this week's specials: </p>
+<p> Here are this week's specials </p>
 <p id="thisWeeksSpecials"></p>
 <script>
 
@@ -136,18 +136,23 @@ for (i in jsonArray) {
 </div>
 
 <button class="accordion">Most Popular</button>
-<div id="mostPopular" class="panel">
+<div class="panel">
 <p> Here are the most popular restaurants (>=4.5 stars)</p>
+<p id="mostPopular" ></p>
 
 </div>
 
 <button class="accordion">Cheap Dates</button>
-<div id="categories" class="panel">
-  <p><b>Price range: $</b></p>
+<div class="panel">
+<p>Here are the most affordable restaurants</p>
+<p id="categories" ></p>
+
 </div>
 
-<button class="accordion">Closest restaurant</button>
-<div id="closest" class="panel">
+<button class="accordion">Closest Restaurants</button>
+<div class="panel">
+<p> Here is the closest restaurant to you</p>
+<p id="closest" ></p>
 </div>
 
 </div>
