Suggestions tab final tweaks.

--- a/Updated-Version-Logo/assets/Website.html
+++ b/Updated-Version-Logo/assets/Website.html
@@ -136,18 +136,23 @@ for (i in jsonArray) {
 </div>
 
 <button class="accordion">Most Popular</button>
-<div id="mostPopular" class="panel">
+<div class="panel">
 <p> Here are the most popular restaurants (>=4.5 stars)</p>
+<p id="mostPopular" ></p>
 
 </div>
 
 <button class="accordion">Cheap Dates</button>
-<div id="categories" class="panel">
-  <p><b>Price range: $</b></p>
+<div class="panel">
+<p>Here are the most affordable restaurants</p>
+<p id="categories" ></p>
+
 </div>
 
-<button class="accordion">Closest restaurant</button>
-<div id="closest" class="panel">
+<button class="accordion">Closest Restaurants</button>
+<div class="panel">
+<p> Here is the closest restaurant to you</p>
+<p id="closest" ></p>
 </div>
 
 </div>
