--- a/Updated-Version-Logo/assets/Website.html
+++ b/Updated-Version-Logo/assets/Website.html
@@ -74,62 +74,6 @@
 <script>
 
 
-var i, x ="";
-
-
-var jsonArray = [
-  {
-    "dayOfWeek": "Monday",
-    "nameOfRestaurant" : "Rogers Park Social",
-    "special" : "$6 Glasses of Wine",
-    "address" : "6920 N Glenwood Ave., Chicago, IL 60626"
-  },
-  {
-    "dayOfWeek": "Tuesday",
-    "nameOfRestaurant" : "R Public House",
-    "special" : "$5 Burger Monday",
-    "address" : "1508 W Jarvis Ave., Chicago, IL 60626"
-  },
-  {
-    "dayOfWeek": "Wednesday",
-    "nameOfRestaurant" : "Pub 626",
-    "special" : "$10 Mussels and $5 Mules",
-    "address" : "1406 W Morse Ave, Chicago, IL 60626"
-  },
-  {
-    "dayOfWeek": "Thursday",
-    "nameOfRestaurant" : "J.B. Albertos's",
-    "special" : "1/2 Chicken Dinner for $8.50",
-    "address" : "1326 West Morse Avenue, Chicago, IL 60626"
-  },
-  {
-    "dayOfWeek": "Friday",
-    "nameOfRestaurant" : "Bulldog Ale House",
-    "special" : "All You Can Eat Fish Fry $10.99",
-    "address" : "6606 N Sheridan Rd, Chicago, IL 60626"
-  },
-  {
-    "dayOfWeek": "Saturday",
-    "nameOfRestaurant" : "Bangers & Lace",
-    "special" : "$3 Hot Dog and Chips",
-    "address" : "810 Grove St, Evanston, IL 60201"
-  },
-  {
-    "dayOfWeek": "Sunday",
-    "nameOfRestaurant" : "Lighthouse Tavern",
-    "special" : "Crabs: $1 per oz",
-    "address" : "7301 N Sheridan Rd, Chicago, IL 60626"
-  }
-];
-
-for (i in jsonArray) {
-  x  +=  "<div class='restaurantTabs'><div class='suggestionsTabsHeaders'>" + jsonArray[i].dayOfWeek + "</div><br>";
-  x  +=  jsonArray[i].nameOfRestaurant + "<br>";
-  x  +=  jsonArray[i].special + "<br>";
-  x  +=  jsonArray[i].address + "<br></div>";
-}
-
-  document.getElementById("thisWeeksSpecials").innerHTML = x;
 
   </script>
 
@@ -153,6 +97,7 @@ for (i in jsonArray) {
 <div class="panel">
 <p> Here is the closest restaurant to you</p>
 <p id="closest" ></p>
+<div id="map"></div>
 </div>
 
 </div>
