--- a/Updated-Version-Logo/assets/Website.html
+++ b/Updated-Version-Logo/assets/Website.html
@@ -69,33 +69,68 @@
 <button class="accordion">This Week</button>
 <div class="panel">
     <!--add entire weekly deals that pulls from JSON data-->
-<p> Here are this week's specials: </p>
-<p id="thisWeeksSpecials"></p>
-<script>
+<p>Here are some weekly deals our staff recommends:</p>
+<table>
+  <tr>
+    <th>Monday</th>
+    <th>Tuesday</th>
+    <th>Wednesday</th>
+    <th>Thursday</th>
+    <th>Friday</th>
+    <th>Saturday</th>
+    <th>Sunday</th>
+  </tr>
 
+  <tr>
+    <td>Rogers Park Social</td>
+    <td>R Public House</td>
+    <td>Pub 626</td>
+    <td>J.B. Albertos's</td>
+    <td>Bulldog Ale House</td>
+    <td>Bangers and Lace</td>
+    <td>Lighthouse Tavern</td>
+  </tr>
 
+    <tr>
+    <td>$6 Glasses of Wine</td>
+    <td>$5 Burger Monday</td>
+    <td>$10 Mussels and $5 Mules</td>
+    <td>1/2 Chicken Dinner for $8.50</td>
+    <td>All You Can Eat Fish Fry $10.99</td>
+    <td>$3 Hot Dog and Chips</td>
+    <td>Crabs: $1 per oz</td>
+  </tr>
 
-  </script>
+  <tr>
+    <td>6920 N Glenwood Ave, Chicago, IL 60626</td>
+    <td>1508 W Jarvis Ave, Chicago, IL 60626</td>
+    <td>1406 W Morse Ave, Chicago, IL 60626</td>
+    <td>1326 West Morse Avenue, Chicago, IL 60626</td>
+    <td>6606 N Sheridan Rd, Chicago, IL 60626</td>
+    <td>810 Grove St, Evanston, IL 60201</td>
+    <td>7301 N Sheridan Rd, Chicago, IL 60626</td>
+  </tr>
+</table>
 
 </div>
 
 <button class="accordion">Most Popular</button>
 <div class="panel">
-<p> Here are the most popular restaurants (>=4.5 stars)</p>
+<p> Here are the most popular restaurants in your area:</p>
 <p id="mostPopular" ></p>
 
 </div>
 
 <button class="accordion">Cheap Dates</button>
 <div class="panel">
-<p>Here are the most affordable restaurants</p>
+<p>Here are the most affordable restaurants in your area:</p>
 <p id="categories" ></p>
 
 </div>
 
 <button class="accordion">Closest Restaurants</button>
 <div class="panel">
-<p> Here is the closest restaurant to you</p>
+<p> Here is the closest restaurant to you:</p>
 <p id="closest" ></p>
 <div id="map"></div>
 </div>
